--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,9 +1,9 @@
 .tech-tag {
-  color: #ffd700;
+  color: goldenrod;
 }
 
 .text-zone a {
-  color: #ffd700;
+  color: goldenrod;
   text-decoration: none;
   padding-left: 4px;
 }
