--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -60,12 +60,12 @@
     border: none;
   }
   .flat-button {
-    color: #ffd700;
+    color: goldenrod;
     font-size: 11px;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
-    border: 1px solid #ffd700;
+    border: 1px solid goldenrod;
     float: left;
     border-radius: 4px;
     background: 0 0;
@@ -112,7 +112,7 @@
     font-size: 16px;
 
     span {
-      color: #ffd700;
+      color: goldenrod;
     }
   }
 }
@@ -132,7 +132,7 @@
 
 .input__label--hoshi:after {
   margin-top: 2px;
-  border-bottom: 2px solid #ffd700;
+  border-bottom: 2px solid goldenrod;
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
   -webkit-transition: -webkit-transform 0.3s;
