--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,8 +4,11 @@
     left: 10%;
     top: 50%;
     transform: translateY(-50%);
-    width: 40%;
     max-height: 90%;
+
+    a {
+      pointer-events: none;
+    }
   }
 
   h1 {
@@ -19,7 +22,7 @@
     &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: goldenrod;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
@@ -30,7 +33,7 @@
     &:after {
       content: '<h1/>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: goldenrod;
       font-size: 18px;
       position: absolute;
       margin-top: 18px;
@@ -59,24 +62,68 @@
     letter-spacing: 3px;
     animation: fadeIn 1s 1.8s backwards;
   }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
 
-  .flat-button {
-    color: #ffd700;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 4px;
+  ul li {
+    --c: goldenrod;
+    color: var(--c);
+    font-size: 1.4em;
+    border: 0.3em solid var(--c);
+    border-radius: 0.5em;
+    width: 12em;
+    height: 3em;
+    text-transform: uppercase;
+    font-weight: bold;
     font-family: sans-serif;
-    text-decoration: none;
-    padding: 10px 18px;
-    border: 1px solid #ffd700;
-    margin-top: 25px;
-    float: left;
-    animation: fadeInAnimation 1s 1.8s backwards;
-    white-space: nowrap;
+    letter-spacing: 0.1em;
+    text-align: center;
+    line-height: 3em;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: 0.5s;
+    margin: 1em 0;
+    pointer-events: auto;
+  }
 
-    &:hover {
-      background: #ffd700;
-      color: #333;
-    }
+  ul li span {
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    background-color: var(--c);
+    transform: translateY(150%);
+    border-radius: 50%;
+    left: calc((var(--n) - 1) * 25%);
+    transition: 0.5s;
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+    z-index: -1;
+  }
+
+  ul li:hover {
+    color: white;
+  }
+
+  ul li:hover span {
+    transform: translateY(0) scale(2);
+  }
+
+  ul li span:nth-child(1) {
+    --n: 1;
+  }
+
+  ul li span:nth-child(2) {
+    --n: 2;
+  }
+
+  ul li span:nth-child(3) {
+    --n: 3;
+  }
+
+  ul li span:nth-child(4) {
+    --n: 4;
   }
 }
