--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,13 +10,21 @@
 }
 
 .tags {
-  color: #ffd700;
+  color: goldenrod;
   opacity: 0.6;
   position: absolute;
   bottom: 0;
   left: 120px;
   font-size: 18px;
   font-family: 'La Belle Aurore', cursive;
+  color: goldenrod;
+  opacity: 0.6;
+  position: absolute;
+  bottom: 0;
+  left: 120px;
+  font-size: 18px;
+  font-family: 'La Belle Aurore', cursive;
+  pointer-events: none;
 }
 
 .bottom-tag-html {
@@ -45,7 +53,7 @@
   h1 {
     font-size: 53px;
     font-family: 'Coolvetica';
-    color: #ffd700;
+    color: goldenrod;
     font-weight: 400;
     margin-top: 0;
     position: relative;
@@ -55,7 +63,7 @@
     &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: goldenrod;
       font-size: 18px;
       position: absolute;
       margin-top: -10px;
@@ -67,7 +75,7 @@
     &:after {
       content: '<h1/>';
       font-family: 'La Belle Aurore', cursive;
-      color: #ffd700;
+      color: goldenrod;
       font-size: 18px;
       line-height: 18px;
       position: absolute;
