--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -57,11 +57,19 @@
       line-height: 24px;
     }
 
-    .description {
+    .technologies {
       font-size: 14px;
       margin-bottom: 5px;
       color: #fff;
       font-weight: 700;
+    }
+
+    .description {
+      font-size: 14px;
+      margin-bottom: 5px;
+      color: #fff;
+
+      padding-right: 20px;
     }
 
     .btn {
