--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -21,3 +21,12 @@ ul {
     margin: 1em 0em;
   }
 }
+
+@media screen and (max-width: 480px) {
+  h2 {
+    font-size: 1.25em;
+  }
+  h3 {
+    font-size: 1.25em;
+  }
+}
