--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,11 +1,10 @@
 .nav-bar {
   background: #181818;
-  width: 90px;
-  height: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
+  width: 5vw;
+  height: 100vh;
   z-index: 3;
-  min-height: 500px;
 
   .logo {
     display: block;
@@ -135,5 +134,34 @@
         }
       }
     }
+  }
+}
+@media screen and (max-width: 1024px) {
+  .nav-bar {
+    width: 8vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav-bar {
+    width: 11vw;
+  }
+}
+
+@media screen and (max-width: 667px) {
+  .nav-bar {
+    width: 13vw;
+  }
+  .socialMedia {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .socialMedia {
+    display: block !important;
+  }
+  .nav-bar {
+    width: 23vw;
   }
 }
