--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -190,25 +190,15 @@ input:focus:-ms-input-placeholder {
   color: transparent;
 }
 
-@media screen and (max-width: 1024px) {
-  .info-map {
-    right: 14%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .info-map {
-    display: none;
-  }
-
+@media screen and (max-width: 1200px) {
   .map-wrap {
-    display: none;
+    float: none;
+    margin: 0;
+    width: 100%;
+    height: 400px;
   }
-}
 
-@media screen and (max-width: 480px) {
-  .contact-form input[type='text'],
-  .contact-form input[type='email'] {
-    font-size: 15px;
+  .info-map {
+    display: none;
   }
 }
