--- a/src/components/Experience/index.scss
+++ b/src/components/Experience/index.scss
@@ -22,6 +22,10 @@ ul {
   }
 }
 
+.slick-prev {
+  left: -50px !important;
+}
+
 @media screen and (max-width: 480px) {
   h2 {
     font-size: 1.25em;
