--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -18,6 +18,7 @@
     margin: 0;
     font-family: 'Coolvetica';
     font-weight: 400;
+    letter-spacing: 4px;
 
     &:before {
       content: '<h1>';
@@ -43,13 +44,14 @@
     }
 
     img {
-      margin-left: 20px;
-      margin-right: 2px;
+      margin-left: 11px;
+      margin-right: 1px;
       opacity: 0;
-      width: 32px;
-      height: auto;
+      width: 60px;
       animation: rotateIn 1s linear both;
       animation-delay: 1.4s;
+      position: relative;
+      top: 26px;
     }
   }
 
@@ -74,7 +76,7 @@
     font-size: 1.4em;
     border: 0.3em solid var(--c);
     border-radius: 0.5em;
-    width: 12em;
+    width: 11em;
     height: 3em;
     text-transform: uppercase;
     font-weight: bold;
@@ -88,6 +90,10 @@
     transition: 0.5s;
     margin: 1em 0;
     pointer-events: auto;
+  }
+
+  ul li:hover {
+    background: goldenrod;
   }
 
   ul li span {
@@ -128,14 +134,27 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .home-page .text-zone {
+    left: 8%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home-page .text-zone {
+    left: 10%;
+  }
+}
+
 @media screen and (max-width: 667px) {
   .home-page h1 {
     font-size: 40px;
     line-height: 43px;
   }
   .home-page h1 img {
-    margin-left: 12px;
-    width: 25px;
+    top: 14px;
+    margin-left: 3px;
+    width: 36px;
   }
   .home-page h2 {
     margin-top: 10px;
@@ -151,10 +170,6 @@
 }
 
 @media screen and (max-width: 480px) {
-  .home-page h1 img {
-    margin-left: 11px;
-    width: 18px;
-  }
   .text-animate-hover {
     min-width: 7px;
   }
@@ -169,5 +184,11 @@
   }
   .home-page .text-zone {
     top: 50%;
+  }
+  .nav-bar nav a:after {
+    font-size: 5px;
+  }
+  .home-page .text-zone {
+    left: 7%;
   }
 }
