--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,8 +1,7 @@
 .page {
   height: 100vh;
   position: relative;
-
-  width: 95vw;
+  flex: 1 1 0%;
 }
 
 .top-tags {
@@ -35,8 +34,7 @@
 .container {
   width: 100%;
   will-change: contents;
-  height: 90%;
-  min-height: 566px;
+  height: 100%;
   position: absolute;
   opacity: 0;
   top: 5%;
@@ -104,6 +102,12 @@
     &:nth-of-type(3) {
       animation-delay: 1.3s;
     }
+    &:nth-of-type(4) {
+      animation-delay: 1.4s;
+    }
+    &:nth-of-type(5) {
+      animation-delay: 1.5s;
+    }
   }
 
   .text-zone {
@@ -125,9 +129,6 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .page {
-    width: 92vw;
-  }
 }
 
 @media screen and (max-width: 768px) {
