--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -2,7 +2,7 @@
   background: #181818;
   position: relative;
   top: 0;
-  width: 5vw;
+  width: 90px;
   height: 100vh;
   z-index: 3;
 
@@ -12,12 +12,13 @@
 
     img {
       display: block;
-      margin: 8px auto;
-      width: 24px;
+      margin: 0 auto;
+      width: 42px;
       height: auto;
 
       &.sub-logo {
         width: 50px;
+        margin: 0 auto;
       }
     }
   }
@@ -162,6 +163,6 @@
     display: block !important;
   }
   .nav-bar {
-    width: 23vw;
+    width: 15vw;
   }
 }
