--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -96,9 +96,9 @@
   position: absolute;
   background: #000;
   top: 30px;
-  right: 33%;
+  right: 30%;
   z-index: 999999;
-  width: 267px;
+  width: 315px;
   padding: 20px;
   color: #fff;
   font-family: 'Helvetica';
@@ -196,6 +196,7 @@ input:focus:-ms-input-placeholder {
     margin: 0;
     width: 100%;
     height: 400px;
+    display: none;
   }
 
   .info-map {
